# gh-stack

./: .cargo_vcs_info.json  .gh-stack.env  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/workflows/: annotate.yml  ci.yml  release.yml
Formula/: gh-stack.rb
docs/: annotate.md  autorebase.md  land.md  log.md  rebase.md  status.md  troubleshooting.md
src/: browser.rs  gh_cli.rs  git.rs  graph.rs  identifier.rs  land.rs  lib.rs  main.rs  markdown.rs  persist.rs  status.rs  tree.rs  util.rs
src/api/: checks.rs  create.rs  land.rs  mod.rs  pull_request.rs  search.rs  stack.rs
src/snapshots/: gh_stack__markdown__tests__build_table_all_closed_shows_checkmark.snap  gh_stack__markdown__tests__build_table_linear_stack.snap  gh_stack__markdown__tests__build_table_mixed_states.snap  gh_stack__markdown__tests__build_table_single_pr.snap  gh_stack__markdown__tests__build_table_with_badges.snap  gh_stack__markdown__tests__build_table_with_badges_mixed_states.snap  gh_stack__markdown__tests__build_table_with_closed_pr.snap  gh_stack__markdown__tests__build_table_with_draft_pr.snap  gh_stack__markdown__tests__build_table_with_merged_pr.snap  gh_stack__status__tests__snapshot_status_all_passing.snap  gh_stack__status__tests__snapshot_status_json.snap  gh_stack__status__tests__snapshot_status_mixed.snap  gh_stack__status__tests__snapshot_status_no_checks.snap  gh_stack__status__tests__snapshot_status_single_pr.snap  gh_stack__status__tests__snapshot_status_unicode.snap  gh_stack__status__tests__snapshot_status_with_commits.snap  gh_stack__status__tests__snapshot_status_with_draft.snap  gh_stack__status__tests__snapshot_status_with_legend.snap  gh_stack__tree__tests__snapshot_linear_stack_ascii.snap  gh_stack__tree__tests__snapshot_linear_stack_unicode.snap  gh_stack__tree__tests__snapshot_no_repo_hint.snap  gh_stack__tree__tests__snapshot_single_pr.snap  gh_stack__tree__tests__snapshot_stack_with_commits.snap  gh_stack__tree__tests__snapshot_with_closed_merged.snap  gh_stack__tree__tests__snapshot_with_draft.snap
