[package]
name = "gh-stack"
version = "0.5.1"
authors = ["Timothy Andrew <mail@timothyandrew.net>, Luis Ball <luqven@gmail.com>"]
license = "MIT"
repository = "https://github.com/luqven/gh-stack"
readme = "README.md"
edition = "2021"
description = "Manage stacked PR workflows on Github"
keywords = ["github", "code-review", "stacked-pr"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
futures = "0.3.30"
petgraph = "0.6"
regex = "1"
git2 = { version = "0.18", default-features = false }
dialoguer = "0.11"
clap = "2.34"
console = "0.15"
dotenvy = "0.15"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
insta = "1.39"
mockito = "1.4"
serial_test = "3.1"
tempfile = "3"
tokio-test = "0.4"
